# jwcook.dev

./: .gitignore  .pre-commit-config.yaml  .ring  Makefile  README.md  dither.sh  giscus.json  justfile  package-lock.json  package.json  pyproject.toml  requirements.txt
assets/: credits.md  fonts.css  style.css
assets/css/: fonts.css  giscus.css  style.css  tippy.css
assets/data/: fruit.csv
assets/dotfiles/: .project
assets/js/: style.js
assets/templates/: page.html
docs/: conf.py  index.md
docs/_static/: style.css
pages/: 404.md  about-site.md  about.md  about_site.md  asdf.md  blogroll.md  comments.md  conf.py  credits.md  guestbook.md  index.md  links.md  log.md  lorem-ipsum.md  lorem_ipsum.md  md-test.md  md_test.md  open-source.md  open_source.md  photography.md  posts.md  projects.md  robots.txt  sitemap.md  slashpages.md  sphinx_tidy.py  subpage_2.md  succulents.md  tags.md  todo.md  tootltips.md  uses.md  willow.md
pages/posts/: 2024-08-08-lorem-ipsum.md  lorem-ipsum.md  website-0-intro.md  website-1-basics.md  website-1-ssg.md
scripts/: __init__.py  dither.py  dither.sh  dl_profile_pics.py
src/: __init__.py  conf.py  debug.py  dither.py  dl_favicons.py  dl_profile_pics.py  fa_ref.py  grid_cards.py  parse_sitemap.py  sphinx_tidy.py
templates/: page.html
templates/sidebar/: navigation.html
