[project]
name = 'jwcook.tilde.team'
requires-python = '>=3.10'
version = "0.1.0"
dependencies = [
    'furo~=2024.5',
    'linkify-it-py>=2.0',
    'matplotlib>=3.9',
    'myst-parser~=3.0',
    'pre-commit~=3.7',
    'sphinx~=7.2',
    'sphinx-autobuild>=2024',
    'sphinx-copybutton>=0.5',
    'sphinx-design>=0.6',
    'sphinx-notfound-page>=1.0',
    'sphinx-sitemap>=2.6',
    # 'sphinx-tags>=0.4',
    'sphinx-tags @ git+https://github.com/JWCook/sphinx-tags@mods',
    'sphinxext-opengraph>=0.9',
    'sphinxext-rediraffe>=0.2',
]

# Placeholder to allow installing dependencies as if it were a package
[tool.setuptools]
packages = ['pages']

[tool.black]
skip-string-normalization = true
line-length = 100

[tool.isort]
profile = 'black'
line_length = 100
skip_gitignore = true
