[project]
name = 'jwcook.dev'
requires-python = '>=3.10'
version = "0.1.0"
dependencies = [
    # Core dependencies
    'sphinx~=7.4',
    'sphinx-design>=0.6',
    'furo~=2024.5',
    'myst-parser~=3.0',
    # Site features
    'linkify-it-py>=2.0',
    'matplotlib>=3.9',
    'pytidylib>=0.3',
    'sphinx-copybutton>=0.5',
    'sphinx-git>=11.0',
    'sphinx-gitstamp>=0.4',
    'sphinx-notfound-page>=1.0',
    'sphinx-sitemap>=2.6',
    'sphinx-tippy>=0.4',
    'sphinx-tags @ git+https://github.com/JWCook/sphinx-tags@mods',
    'sphinxfeed-lsaffre @ git+https://github.com/JWCook/sphinxfeed@master',
    'sphinxext-opengraph>=0.9',
    'sphinxext-rediraffe>=0.2',
    # Dev tools & script dependencies
    'beautifulsoup4>=4.12',
    'pre-commit~=3.7',
    'requests>=2.26',
    'sphinx-autobuild>=2024',
]

# Placeholder to allow installing dependencies as if it were a package
[tool.setuptools]
packages = ['src']

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 100
output-format = 'grouped'
target-version = 'py310'

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['B', 'C4', 'E', 'F']

# Wrap lines to 100 chars, but don't error on unwrappable lines until 120 chars
[tool.ruff.lint.pycodestyle]
max-line-length = 120
